# college-bbs-backend

./: BUG_FIXES.md  BUG_FIXES_SUMMARY.md  DEEP_CODE_REVIEW.md  FRONTEND_COMPLETION.md  ISSUES_CHECKLIST.md  LICENSE  LOG_SECURITY_IMPROVEMENT.md  P2_IMPROVEMENTS_SUMMARY.md  README.md
college-bbs/: CMakeLists.txt  PROJECT_DOCUMENTATION.md  config.json  config.json.bak  main.cc
college-bbs-frontend/: .env  .env.production  DEPLOYMENT.md  PROJECT_DOCUMENTATION.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json
college-bbs-frontend/src/: App.jsx  index.css
college-bbs-frontend/src/components/: Header.jsx  PostCard.jsx  ProtectedRoute.jsx  ReplyItem.jsx
college-bbs-frontend/src/pages/: CreatePost.jsx  Home.jsx  Login.jsx  PostDetail.jsx  Profile.jsx  Register.jsx
college-bbs-frontend/src/services/: api.js  likeService.js  postService.js  replyService.js  userService.js
college-bbs-frontend/src/utils/: auth.js
college-bbs/controllers/: LikeController.cc  LikeController.h  LikeController_coroutine_example.cc  PostController.cc  PostController.h  ReplyController.cc  ReplyController.h  UserController.cc  UserController.h
college-bbs/filters/: AuthFilter.cc  AuthFilter.h
college-bbs/models/: model.json
college-bbs/sql/: init_database.sql
college-bbs/test/: CMakeLists.txt
college-bbs/tools/: CMakeLists.txt  generate_password.cpp
college-bbs/utils/: ErrorLogger.cc  ErrorLogger.h  JwtUtil.cc  JwtUtil.h  PasswordUtil.cc  PasswordUtil.h  ResponseUtil.cc  ResponseUtil.h
docs/: API.md  CLAUDE.md  DEVELOPMENT_HISTORY.md
